--- a/Blank1200px.html
+++ b/Blank1200px.html
@@ -4,6 +4,9 @@
 	<meta charset="UTF-8">
 	<title>Mels Web</title>
 	<link href="Melsweb.css" rel="stylesheet" type="text/css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Platypi:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div id="wrapper">
@@ -23,13 +26,24 @@
 		<main>
 				<h2>Introduction</h2>
 				<p>Hola! I'm Melanie Guzman a Fashion Merchandising Graduate student at Illinois State University</p>
-		</main>
+				<video width="50%" controls>
+					<source src="AFA.mp4" type="video/mp4">
+					Your browser does not support the video tag.
+				</video>
+				<iframe width="50%" height="200" scrolling="no" frameborder="no" allow="autoplay"
+				src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/291558427&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+			<div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
+				<a href="https://soundcloud.com/futuresocietycollective" title="Future Society" target="_blank"
+					style="color: #cccccc; text-decoration: none;">Future Society</a> ·
+				<a href="https://soundcloud.com/futuresocietycollective/aritus-veii" title="Aritus - Veii" target="_blank"
+					style="color: #cccccc; text-decoration: none;">Aritus - Veii</a>
+			</main>
 		<section>
 		<h2>Projects</h2>
 		<img src="ComingSoon.jpeg" alt="Coming Soon">
 		<img src="ComingSoon.jpeg" alt="Coming Soon">
 		<img src="ComingSoon.jpeg" alt="Coming Soon">
-	</section>
+		</section>
 	</div>
 </body>
 </html>
