--- a/Blank1200px.html
+++ b/Blank1200px.html
@@ -3,10 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Mels Web</title>
-	<link href="Melsweb.css" rel="stylesheet" type="text/css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Platypi:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+
+<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css">
+<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/carousel/carousel.umd.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/carousel/carousel.css" /> 
+<link href="Melsweb.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<div id="wrapper">
@@ -17,12 +22,20 @@
 				<li><a href="#">About</a></li>
 				<li><a href="#">Projects</a></li>
 				<li><a href="#">Contact</a></li>
-				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16"> 
-					<path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
-				  </svg>
+				<a href="https://www.linkedin.com/in/melanie-guzman-160476223/" target="_blank">
+					<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16"> 
+						<path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
+					</svg>
+				</a>
 			</ul>
 		</nav>
-		<img id="mainimg" src="Me.JPG" alt="Me">
+
+		<div id="myCarousel" class="f-carousel">
+			<div class="f-carousel__slide"><img src="Me.JPG"></div>
+			<div class="f-carousel__slide"><img src="Coffeeshop.JPG"></div>
+			<div class="f-carousel__slide"><img src="Lelis2024.JPG"></div>
+		</div>
+
 		<main>
 				<h2>Introduction</h2>
 				<p>Hola! I'm Melanie Guzman a Fashion Merchandising Graduate student at Illinois State University</p>
@@ -38,6 +51,7 @@
 				<a href="https://soundcloud.com/futuresocietycollective/aritus-veii" title="Aritus - Veii" target="_blank"
 					style="color: #cccccc; text-decoration: none;">Aritus - Veii</a>
 			</main>
+
 		<section>
 		<h2>Projects</h2>
 		<img src="ComingSoon.jpeg" alt="Coming Soon">
@@ -45,5 +59,13 @@
 		<img src="ComingSoon.jpeg" alt="Coming Soon">
 		</section>
 	</div>
+	
+	<script>
+		const container = document.getElementById("myCarousel");
+		const options = { infinite: true };
+		new Carousel(container, options);
+	</script>
+	
+
 </body>
 </html>
