--- a/About.html
+++ b/About.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css">
 <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/carousel/carousel.umd.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/carousel/carousel.css" /> 
-<link href="Melsweb.css" rel="stylesheet" type="text/css">
+<link href="About.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<div id="wrapper">
@@ -28,30 +28,19 @@
 				</a>
 			</ul>
 		</nav>
-        <h2>Gallery</h2>
-		<div id="myCarousel" class="f-carousel photos">
-			<div class="f-carousel__slide"><img src="2023FS.JPG"></div>
-			<div class="f-carousel__slide"><img src="Researchproj.JPG"></div>
-			<div class="f-carousel__slide"><img src="Startup.jpeg"></div>
-            <div class="f-carousel__slide"><img src="v5Intern.JPG"></div>
-            <div class="f-carousel__slide"><img src="POL.jpg"></div>
-            <div class="f-carousel__slide"><img src="FS Team.jpg"></div>
-		</div>
 
 		<main>
-				<video width="50%" controls>
-					<source src="AFA.mp4" type="video/mp4">
-					Your browser does not support the video tag.
-				</video>
+				<h2>About Me</h2>
+				<p> 
+                    I've always been someone who seeks growth and thrives on challenges, always finding opportunities to learn and develop new skills. Currently pursuing my Masters in Family and Consumer Sciences with a focus on Fashion Merchandising at Illinois State University, I bring over seven years of experience in retail, honing my skills through various sales roles in the fashion industry. Notably, I've excelled as a traveling sales model with AFA, achieving the highest position of ‘Experienced.’ My passion lies in understanding consumer behavior and market trends, key assets in my sales roles. 
+                    
+                    Deeply valuing my cultural background and family connections, I foster loyalty, commitment, and a drive for personal and professional growth. I'm drawn to companies that prioritize a supportive, family-like environment and are committed to long-term relationships with their employees, aligning perfectly with my values and aspirations for contributing to a team’s success.
+                    
+                    Beyond my professional endeavors, I prioritize my well-being by starting my day early before sunrise at the gym, showcasing my dedication as an early bird. Some of my skills include Microsoft Word, PowerPoint, Excel, SPSS, Adobe Express, Google Analytics, and fluency in Spanish, further enriching my ability to connect and excel in diverse environments. </p>
 		</main>
 
-	</div>
-	
-	<script>
-		const container = document.getElementById("myCarousel");
-		const options = { infinite: true };
-		new Carousel(container, options);
-	</script>
+		<section>
+
 	
 
 </body>
