--- a/home.html
+++ b/home.html
@@ -38,6 +38,10 @@
 		<main>
 				<h2>Introduction</h2>
 				<p>Hola! I'm Melanie Guzman a Fashion Merchandising Graduate student at Illinois State University. My journey has led me to exciting adventures as a wholesale representative for two years, where I have met amazing people who share my fashion-forward mindset. I'm always seeking new adventures and experiences that allow me to grow. If I'm not keeping up with trends, I'm on the hunt for the perfect cup of coffee, finding hidden gems in cozy cafes. </p>
+				<video width="50%" controls>
+					<source src="AFA.mp4" type="video/mp4">
+					Your browser does not support the video tag.
+				</video>
 				<iframe width="50%" height="200" scrolling="no" frameborder="no" allow="autoplay"
 				src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/291558427&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 			<div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
