--- a/Blank1200px.html
+++ b/Blank1200px.html
@@ -10,7 +10,7 @@
 <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css">
 <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/carousel/carousel.umd.js"></script>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/carousel/carousel.css" /> 
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/carousel/carousel.css"> 
 <link href="Melsweb.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -40,18 +40,18 @@
 				<p>Hola! I'm Melanie Guzman a Fashion Merchandising Graduate student at Illinois State University. My journey has led me to exciting adventures as a wholesale representative for two years, where I have met amazing people who share my fashion-forward mindset. I'm always seeking new adventures and experiences that allow me to grow. If I'm not keeping up with trends, I'm on the hunt for the perfect cup of coffee, finding hidden gems in cozy cafes. </p>
 				<iframe width="50%" height="200" scrolling="no" frameborder="no" allow="autoplay"
 				src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/291558427&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-			<div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
+	<div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
 				<a href="https://soundcloud.com/futuresocietycollective" title="Future Society" target="_blank"
 					style="color: #cccccc; text-decoration: none;">Future Society</a> ·
 				<a href="https://soundcloud.com/futuresocietycollective/aritus-veii" title="Aritus - Veii" target="_blank"
 					style="color: #cccccc; text-decoration: none;">Aritus - Veii</a>
-			</main>
+		</main>
 
 		<section>
 		<h2>Gallery</h2>
 		<a href="Gallery.html"><img src="Startup.jpeg" alt="Start up"></a> 
 		<a href="Gallery.html"><img src="2023FS.JPG" alt="FS 2023"></a> 
-		<a href="Gallery.html"><img src="FS Team.jpg" alt="FS Team"></a> 
+		<a href="Gallery.html"><img src="FSTeam.jpg" alt="FS Team"></a> 
 		</section>
 	</div>
 	
